Added a VERSION parameter for better organization

--- a/conf/etc/zabbix/zabbix_agentd.d/docker.conf
+++ b/conf/etc/zabbix/zabbix_agentd.d/docker.conf
@@ -2,6 +2,7 @@
 UserParameter=docker.discovery.containers,/etc/zabbix/scripts/docker-containers.sh
 UserParameter=docker.discovery.processes,/etc/zabbix/scripts/docker-processes.sh
 UserParameter=docker.monitoring,/etc/zabbix/scripts/docker-monitoring.sh
+UserParameter=docker.monitoring.version,grep VERSION /etc/zabbix/scripts/docker.cfg | cut -d'=' -f2 | tr -d '\n'
 
 # monitors
 UserParameter=custom.entropy,cat /zbx/proc/sys/kernel/random/entropy_avail
